# EDR-Ransomware

./: CMakeLists.txt  README.md  build_and_test.bat  build_and_test.sh  dynamic_direct_syscall  dynamic_direct_syscall.cpp  hooking_syscall_stub.cpp  main.cpp  rwarmor.cpp  rwarmor.h  rwarmor_components.cpp
